--- a/src/index.css
+++ b/src/index.css
@@ -1576,6 +1576,7 @@ html {scroll-behavior: smooth}
     display: -webkit-box;
     overflow: hidden;
     text-overflow: ellipsis;
+    text-wrap: auto;
     word-break: break-word;
     -webkit-line-clamp: 3;
     -webkit-box-orient: vertical
