--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,14 @@ html {scroll-behavior: smooth}
 .filter-store li a[data-l="3"]:after {
     background-image: url(https://bp.pstatic.gr/public/dist/095f3e964b5c14ade8be.svg)
 }
+.prices__merchant-logo span.merchant__certification-inline {
+    position: absolute;
+    top: -.75rem;
+    right: -.5rem;
+    width: 18px;
+    height: 18px;
+    border-bottom: 0 !important
+}
 .filter-store li a[data-l="2"]:after {
     background-image: url(https://bp.pstatic.gr/public/dist/b2d88e0b4f185d73a33f.svg)
 }
