--- a/src/App.css
+++ b/src/App.css
@@ -219,6 +219,13 @@
   height: 2rem
 }
 .bhTOi9I4I2nIIKPU_JUz {margin-left: .75rem}
+.UNbCZ {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  width: 100%;
+  margin-bottom: 1rem
+}
 
 
 
