--- a/src/App.css
+++ b/src/App.css
@@ -227,6 +227,18 @@
   margin-bottom: 1rem
 }
 .bjpNBM {margin-bottom: 2rem}
+.lmQiLZ {
+  color: rgb(65, 120, 216);
+  cursor: pointer;
+  padding: 0.5rem 1.4rem;
+  font-weight: 500;
+  font-variant-numeric: tabular-nums;
+  background-color: rgb(221, 226, 230);
+  border-radius: 1.4rem;
+  user-select: none;
+  margin: 0px;
+  font-size: 1rem
+}
 
 
 
