--- a/src/App.css
+++ b/src/App.css
@@ -239,6 +239,14 @@
   margin: 0px;
   font-size: 1rem
 }
+.gmqSWM {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  gap: 0.5rem;
+  flex-wrap: wrap;
+  max-width: 1200px
+}
 
 
 
