--- a/src/App.css
+++ b/src/App.css
@@ -239,6 +239,14 @@
   margin: 0px;
   font-size: 1rem
 }
+.jfGtLT {
+  display: flex;
+  align-items: start;
+  justify-content: flex-start;
+  flex-direction: column;
+  width: 100%;
+  gap: 10px
+}
 .gmqSWM {
   display: flex;
   align-items: center;
