--- a/src/App.css
+++ b/src/App.css
@@ -255,6 +255,25 @@
   flex-wrap: wrap;
   max-width: 1200px
 }
+.dsWkau {
+  font-weight: normal;
+  margin: 1rem 0px 0px;
+  font-variant-numeric: tabular-nums;
+  font-size: 1.25rem;
+  text-align: left;
+  width: 100%;
+  user-select: none;
+  color: var(--colors-themed-body-color-lighter)
+}
+@media only screen and (min-width: 48em) {
+  .dsWkau {
+    margin: 3rem 0px 0px;
+    font-size: 1.2rem
+  }
+}
+@media only screen and (min-width: 80em) {
+  .dsWkau {font-size: 1.25rem}
+}
 
 
 
