--- a/src/App.css
+++ b/src/App.css
@@ -274,6 +274,11 @@
 @media only screen and (min-width: 80em) {
   .dsWkau {font-size: 1.25rem}
 }
+.iJzdCa {
+  display: flex;
+  gap: 1rem;
+  align-items: center
+}
 
 
 
