--- a/src/App.css
+++ b/src/App.css
@@ -279,6 +279,25 @@
   gap: 1rem;
   align-items: center
 }
+.eZWmzM {
+  font-weight: 400;
+  font-size: 1.6rem;
+  color: var(--colors-themed-body-color);
+  text-align: left;
+  margin: 0px 0px 0.6rem
+}
+@media only screen and (min-width: 25.8em) {
+  .eZWmzM {font-size: 1.6rem}
+}
+@media only screen and (min-width: 48em) {
+  .eZWmzM {font-size: 1.9rem}
+}
+@media only screen and (min-width: 64em) {
+  .eZWmzM {font-size: 2rem}
+}
+@media only screen and (min-width: 80em) {
+  .eZWmzM {font-size: 2.1rem}
+}
 
 
 
