--- a/src/App.css
+++ b/src/App.css
@@ -279,6 +279,11 @@
   gap: 1rem;
   align-items: center
 }
+.iJzdCa select {
+  background-color: var(--colors-themed-card-bg);
+  padding: 0.7rem 0.8rem;
+  border-radius: 0.5rem
+}
 .eZWmzM {
   font-weight: 400;
   font-size: 1.6rem;
