--- a/src/App.css
+++ b/src/App.css
@@ -227,6 +227,9 @@
   margin-bottom: 1rem
 }
 .bjpNBM {margin-bottom: 2rem}
+.lmQiLZ:hover {
+  background-color: rgb(214, 220, 225)
+}
 .lmQiLZ {
   color: rgb(65, 120, 216);
   cursor: pointer;
