--- a/src/App.css
+++ b/src/App.css
@@ -304,6 +304,14 @@
 @media only screen and (min-width: 80em) {
   .eZWmzM {font-size: 2.1rem}
 }
+.zAYuO {
+  color: var(--colors-themed-body-color-lighter);
+  cursor: pointer;
+  user-select: none;
+  font-size: 1.1rem;
+  margin-top: 0.75rem;
+  border-bottom: 1px dotted var(--colors-themed-body-color-lightest)
+}
 
 
 
